fix horizontal scrolling issue

--- a/src/main/webapp/resources/theme1/css/style.css
+++ b/src/main/webapp/resources/theme1/css/style.css
@@ -78,6 +78,7 @@ header h1 {
     font-size: 1.5em;
     position: absolute;
     top: 0;
+    left: 0;
     width: 100%;
 }
 .navbar a {
